# ce-mail

./: Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
docs/: architecture.md  smtp-gateway.md  threat-model.md
examples/: screening.rs  send_and_drain.rs
src/: attachment.rs  client.rs  crypto.rs  envelope.rs  lib.rs  limits.rs  mailbox.rs  main.rs  persist.rs  proto.rs  receipt.rs  screening.rs  service.rs  thread.rs
tests/: integration.rs  properties.rs
